--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,10 @@
     "lib": [
       "ES2022",
       "dom"
-    ]
+    ],
+    "typeRoots": ["node_modules/@types",
+    "./node_modules/@angular",
+    "./node_modules/@angular/common/http","./node_modules/rxjs/dist/types/operators/index.d.ts"]
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
